--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-nova-transferencia (onTransferir)="transferir($event)"></app-nova-transferencia>
+<app-nova-transferencia></app-nova-transferencia>
 <app-extrato></app-extrato>
 
